refactor: migration to Java 11 and using guava Lists  #401
Signed-off-by: Azat Satklichov <azat.satklichov@broadcom.com>